# ELT_pipeline

./: README.md  Task_A.md  Task_B.md  commands.docx  config.json  data.py  eda_app.py  endpoint_app.py  pygwalker_spec_data_1.json  source.sh  ~$mmands.docx
airbyte/airbyte-integrations/connectors/source-exnaton-api/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
airbyte/airbyte-integrations/connectors/source-exnaton-api/source_exnaton_api/: __init__.py  run.py  source.py  source_id_list.py  spec.yaml
airbyte/airbyte-integrations/connectors/source-exnaton-api/source_exnaton_api/secrets/: configured_catalogue.json
dbt_project/transforms/: dbt_project.yml
dbt_project/transforms/models/muid_1_transforms/: muid_1_transforms.sql  schema.yml
dbt_project/transforms/models/muid_2_transforms/: muid_2_transforms.sql  schema.yml
exnaton_connector/: main.py
exnaton_connector/source_http/: __init__.py  config.json  configured_catalogue.json  run.py  schema.json  source1.py  source2.py  spec.yaml
exnaton_connector/source_http/schemas/: data_1.json
